--- a/package/qca/nss/qca-nss-ecm-64/Makefile
+++ b/package/qca/nss/qca-nss-ecm-64/Makefile
@@ -5,9 +5,9 @@ PKG_RELEASE:=$(AUTORELEASE)
 
 PKG_SOURCE_URL:=https://source.codeaurora.org/quic/cc-qrdk/oss/lklm/qca-nss-ecm
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_DATE:=2021-04-29
-PKG_SOURCE_VERSION:=c115aec34867b582e2e5ea79fc5315971e0e953c
-PKG_MIRROR_HASH:=a772996af7bbae7031eebc2f789431d29be67f11eb0a1e874c08b74eec6f4585
+PKG_SOURCE_DATE:=2021-07-03
+PKG_SOURCE_VERSION:=60db79f1fce8c621610bf82360c5b59b634b9120
+PKG_MIRROR_HASH:=841c91aa1cd265fbe6173db3169cad0fffd1a425075019852b40e198b1cebb60
 
 PKG_BUILD_PARALLEL:=1
 
@@ -30,7 +30,7 @@ define KernelPackage/qca-nss-ecm-64
   FILES:=$(PKG_BUILD_DIR)/*.ko
   KCONFIG:=CONFIG_BRIDGE_NETFILTER=y \
 	CONFIG_NF_CONNTRACK_EVENTS=y \
-	CONFIG_NF_CONNTRACK_CHAIN_EVENTS=n \
+	CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y \
 	CONFIG_NF_CONNTRACK_DSCPREMARK_EXT=n
 endef
 
@@ -69,7 +69,8 @@ ECM_MAKE_OPTS+= ECM_FRONT_END_NSS_ENABLE=y \
 		ECM_CLASSIFIER_DSCP_ENABLE=n \
 		ECM_CLASSIFIER_PCC_ENABLE=n \
 		ECM_BAND_STEERING_ENABLE=n \
-		ECM_INTERFACE_PPPOE_ENABLE=y
+		ECM_INTERFACE_PPPOE_ENABLE=y \
+		ECM_IPV6_ENABLE=y
 endif
 
 ifeq ($(CONFIG_TARGET_BOARD), "ipq807x")
