--- a/package/firmware/ath11k-firmware/Makefile
+++ b/package/firmware/ath11k-firmware/Makefile
@@ -8,13 +8,15 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ath11k-firmware
-PKG_SOURCE_DATE:=2021-07-20
-PKG_SOURCE_VERSION:=d4003c1921810adcc455d46f17776a3392b29436
-PKG_MIRROR_HASH:=6839081bafbc56d3b8e41d30790b20813c349cbc1732e887347ef5ed3ea717e4
+PKG_SOURCE_DATE:=2021-12-16
+PKG_SOURCE_VERSION:=198f9c2bcdd5ae6b0940d977ac749019b15452ac
+PKG_MIRROR_HASH:=f00f22b536724fdb53f2cadaef39c0264633227a4d5775eb7cbb08167085557e
 PKG_RELEASE:=$(AUTORELEASE)
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/kvalo/ath11k-firmware.git
+PKG_SOURCE_URL:=https://github.com/quic/upstream-wifi-fw.git
+
+PKG_LICENSE_FILES:=ath11k-firmware/LICENSE.md
 
 PKG_MAINTAINER:=Robert Marko <robimarko@gmail.com>
 
@@ -37,11 +39,6 @@ $(Package/ath11k-firmware-default)
   TITLE:=ath11k firmware for IPQ8074 devices
 endef
 
-define Package/ath11k-firmware-qca6390
-$(Package/ath11k-firmware-default)
-  TITLE:=ath11k firmware for QCA6390 devices
-endef
-
 define Package/ath11k-firmware-qcn9074
 $(Package/ath11k-firmware-default)
   TITLE:=ath11k firmware for QCN9074 devices
@@ -52,42 +49,26 @@ define Build/Compile
 endef
 
 define Package/ath11k-firmware-ipq6018/install
-	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ6018/hw1.0
 	$(INSTALL_DIR) $(1)/lib/firmware/IPQ6018
 	$(INSTALL_DATA) \
-		$(PKG_BUILD_DIR)/IPQ6018/hw1.0/board-2.bin \
-		$(1)/lib/firmware/ath11k/IPQ6018/hw1.0/
-	$(INSTALL_DATA) \
-		$(PKG_BUILD_DIR)/IPQ6018/hw1.0/2.5.0.1/WLAN.HK.2.5.0.1-01100-QCAHKSWPL_SILICONZ-1/* \
+		$(PKG_BUILD_DIR)/ath11k-firmware/IPQ6018/hw1.0/2.5.0.1/WLAN.HK.2.5.0.1-01201-QCAHKSWPL_SILICONZ-1/* \
 		$(1)/lib/firmware/IPQ6018/
 endef
 
 define Package/ath11k-firmware-ipq8074/install
-	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ8074/hw2.0
 	$(INSTALL_DIR) $(1)/lib/firmware/IPQ8074
 	$(INSTALL_DATA) \
-		$(PKG_BUILD_DIR)/IPQ8074/hw2.0/board-2.bin \
-		$(1)/lib/firmware/ath11k/IPQ8074/hw2.0/
-	$(INSTALL_DATA) \
-		$(PKG_BUILD_DIR)/IPQ8074/hw2.0/2.5.0.1/WLAN.HK.2.5.0.1-01100-QCAHKSWPL_SILICONZ-1/* \
-		$(1)/lib/firmware/IPQ8074/
-endef
-
-define Package/ath11k-firmware-qca6390/install
-	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCA6390/hw2.0
-	$(INSTALL_DATA) \
-		$(PKG_BUILD_DIR)/QCA6390/hw2.0/1.0.1/WLAN.HST.1.0.1-01740-QCAHSTSWPLZ_V2_TO_X86-1/* \
-		$(1)/lib/firmware/ath11k/QCA6390/hw2.0/
+		$(PKG_BUILD_DIR)/ath11k-firmware/IPQ8074/hw2.0/2.5.0.1/WLAN.HK.2.5.0.1-01201-QCAHKSWPL_SILICONZ-1/* \
+	$(1)/lib/firmware/IPQ8074/
 endef
 
 define Package/ath11k-firmware-qcn9074/install
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0
 	$(INSTALL_DATA) \
-		$(PKG_BUILD_DIR)/QCN9074/hw1.0/2.5.0.1/WLAN.HK.2.5.0.1-01100-QCAHKSWPL_SILICONZ-1/* \
+		$(PKG_BUILD_DIR)/ath11k-firmware/QCN9074/hw1.0/testing/2.6.0.1.r6/WLAN.HK.2.6.0.1.r6-00010-QCAHKSWPL_SILICONZ-1/* \
 		$(1)/lib/firmware/ath11k/QCN9074/hw1.0/
 endef
 
 $(eval $(call BuildPackage,ath11k-firmware-ipq6018))
 $(eval $(call BuildPackage,ath11k-firmware-ipq8074))
-$(eval $(call BuildPackage,ath11k-firmware-qca6390))
 $(eval $(call BuildPackage,ath11k-firmware-qcn9074))
