--- a/package/emortal/default-settings/Makefile
+++ b/package/emortal/default-settings/Makefile
@@ -23,13 +23,7 @@ define Package/default-settings
   CATEGORY:=LuCI
   TITLE:=LuCI support for Default Settings
   PKGARCH:=all
-  DEPENDS:=+luci-lib-base
-endef
-
-define Package/default-settings-lang
-  $(Package/default-settings)
-  TITLE+= (Optimize for users)
-  DEPENDS:=+default-settings +@LUCI_LANG_fr
+  DEPENDS:=+luci-lib-base +@LUCI_LANG_fr
 endef
 
 define Build/Compile
@@ -41,4 +35,3 @@ define Package/default-settings/install
 endef
 
 $(eval $(call BuildPackage,default-settings))
-$(eval $(call BuildPackage,default-settings-lang))
