--- a/package/qca/nss/qca-nss-ecm-64/Makefile
+++ b/package/qca/nss/qca-nss-ecm-64/Makefile
@@ -69,7 +69,7 @@ ECM_MAKE_OPTS+= ECM_FRONT_END_NSS_ENABLE=y \
 		ECM_CLASSIFIER_DSCP_ENABLE=n \
 		ECM_CLASSIFIER_PCC_ENABLE=n \
 		ECM_BAND_STEERING_ENABLE=n \
-		ECM_INTERFACE_PPPOE_ENABLE=y
+		ECM_INTERFACE_PPPOE_ENABLE=y \
 		ECM_IPV6_ENABLE=y
 endif
 
