--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -20,6 +20,14 @@ jobs:
                 echo "CONFIG_TARGET_ipq807x=y" > .config
                 echo "CONFIG_TARGET_ipq807x_generic=y" >> .config
                 echo "CONFIG_TARGET_ipq807x_generic_DEVICE_xiaomi_ax3600=y" >> .config
+                echo "CONFIG_PACKAGE_luci-app-turboacc=y" >> .config
+                echo "CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV=y" >> .config
+                echo "CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y" >> .config
+                echo "CONFIG_DEFAULT_luci-theme-argon=y" >> .config
+                echo "CONFIG_PACKAGE_luci-app-ttyd=y" >> .config
+                echo "CONFIG_PACKAGE_luci-app-qos=y" >> .config
+                echo "CONFIG_DEFAULT_luci-app-upnp=y" >> .config
+                echo "CONFIG_PACKAGE_qos-scripts=y" >> .config
                 make defconfig
 
             - name: Download package sources
