--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -56,7 +56,7 @@ jobs:
             - name: Upload artifacts
               uses: actions/upload-artifact@v2
               with:
-                name: Xiaomi AX3600 images
+                name: Xiaomi-AX3600-images
                 path: Xiaomi-AX3600-images.tar
 
     release:
