--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -74,7 +74,7 @@ jobs:
               uses: "marvinpinto/action-automatic-releases@latest"
               with:
                 repo_token: "${{ secrets.GITHUB_TOKEN }}"
-                prerelease: true
+                release: true
                 title: "Updated built images"
                 automatic_release_tag: "ipq807x-latest"
                 files: bin/targets/ipq807x/generic/*
