--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -1,9 +1,9 @@
-name: Build Xiaomi AX3600
+name: Build IPQ807x
 on: [push]
 
 jobs:
     build:
-        name: Prepare and build Xiaomi AX3600
+        name: Prepare and build IPQ807x generic images
         runs-on: ubuntu-latest
 
         steps:
@@ -15,7 +15,7 @@ jobs:
                 ./scripts/feeds update -a
                 ./scripts/feeds install -a
 
-            - name: Generate config for Xiaomi AX3600
+            - name: Generate config for IPQ807x Generic
               run: |
                 echo "CONFIG_TARGET_ipq807x=y" > .config
                 echo "CONFIG_TARGET_ipq807x_generic=y" >> .config
@@ -39,17 +39,17 @@ jobs:
               run: |
                 make tools/install -j$(nproc) V=s || \
                 make tools/install V=s
-                
+
             - name: Build toolchain
               run: |
                 make toolchain/install -j$(nproc) V=s || \
                 make toolchain/install V=s
-                
+
             - name: Build target images
               run: |
                 make -j$(nproc) V=s || \
                 make V=s
-                
+
             - name: TAR output
               run: tar -cvf ipq807xx-images.tar bin/targets/ipq807x/generic
 
@@ -77,7 +77,7 @@ jobs:
               uses: "marvinpinto/action-automatic-releases@latest"
               with:
                 repo_token: "${{ secrets.GITHUB_TOKEN }}"
-                release: true
+                prerelease: true
                 title: "Updated built images"
                 automatic_release_tag: "ipq807x-latest"
                 files: bin/targets/ipq807x/generic/*
