--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -17,9 +17,21 @@ jobs:
 
             - name: Generate config for IPQ807x Generic
               run: |
-                echo "CONFIG_TARGET_ipq807x=y" > .config
-                echo "CONFIG_TARGET_ipq807x_generic=y" >> .config
-                echo "CONFIG_TARGET_ipq807x_generic_DEVICE_xiaomi_ax3600=y" >> .config
+                echo 'CONFIG_TARGET_ipq807x=y' > .config
+                echo 'CONFIG_TARGET_ipq807x_generic=y' >> .config
+                echo 'CONFIG_TARGET_ipq807x_generic_DEVICE_xiaomi_ax3600=y' >> .config
+                echo 'CONFIG_HAS_SUBTARGETS=y' >> .config
+                echo 'CONFIG_TARGET_BOARD="ipq807x"' >> .config
+                echo 'CONFIG_TARGET_SUBTARGET="generic"' >> .config
+                echo 'CONFIG_TARGET_PROFILE="DEVICE_xiaomi_ax3600"' >> .config
+                echo 'CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"' >> .config
+                echo 'CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"' >> .config
+                echo 'CONFIG_TARGET_ROOTFS_INITRAMFS=y' >> .config
+                echo 'CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD=y' >> .config
+                echo 'CONFIG_TARGET_ROOTFS_SQUASHFS=y' >> .config
+                echo 'CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256' >> .config
+                echo 'CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y' >> .config
+                echo 'CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"' >> .config
                 echo "CONFIG_PACKAGE_luci-app-turboacc=y" >> .config
                 echo "CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV=y" >> .config
                 echo "CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y" >> .config
