--- a/package/qca/nss/qca-nss-clients-64/Makefile
+++ b/package/qca/nss/qca-nss-clients-64/Makefile
@@ -1,56 +1,56 @@
  include $(TOPDIR)/rules.mk
 
-PKG_NAME:=qca-nss-clients
+PKG_NAME:=qca-nss-clients-64
 PKG_RELEASE:=$(AUTORELEASE)
 
 PKG_SOURCE_URL:=https://source.codeaurora.org/quic/cc-qrdk/oss/lklm/nss-clients
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_DATE:=2021-04-29
 PKG_SOURCE_VERSION:=b93c72c1b72c591c2ddc2f0b24f0e2b457720118
-PKG_MIRROR_HASH:=9fab23da994bfbac9a3cef32cdfec31a87a03ed415f36bc926da32b7b0934259
+PKG_MIRROR_HASH:=fbfba64a364b095ea7c9a24cd7af96b63ab0bc29c179e1628c675aa223c0d063
 
 include $(INCLUDE_DIR)/kernel.mk
 include $(INCLUDE_DIR)/package.mk
 
-define KernelPackage/qca-nss-drv-pppoe
+define KernelPackage/qca-nss-drv-pppoe-64
   SECTION:=kernel
   CATEGORY:=Kernel modules
   SUBMENU:=Network Devices
   TITLE:=Kernel driver for NSS (connection manager) - PPPoE
-  DEPENDS:=@TARGET_ipq807x +kmod-qca-nss-drv +kmod-ppp +kmod-pppoe
+  DEPENDS:=@TARGET_ipq807x +kmod-qca-nss-drv-64 +kmod-ppp +kmod-pppoe
   FILES:=$(PKG_BUILD_DIR)/pppoe/qca-nss-pppoe.ko
   AUTOLOAD:=$(call AutoLoad,51,qca-nss-pppoe)
 endef
 
-define KernelPackage/qca-nss-drv-pppoe/Description
+define KernelPackage/qca-nss-drv-pppoe-64/Description
 Kernel modules for NSS connection manager - Support for PPPoE
 endef
 
-define KernelPackage/qca-nss-drv-bridge-mgr
+define KernelPackage/qca-nss-drv-bridge-mgr-64
   SECTION:=kernel
   CATEGORY:=Kernel modules
   SUBMENU:=Network Devices
   TITLE:=Kernel driver for NSS bridge manager
-  DEPENDS:=@TARGET_ipq807x +kmod-qca-nss-drv +kmod-qca-nss-drv-vlan-mgr
+  DEPENDS:=@TARGET_ipq807x +kmod-qca-nss-drv-64 +kmod-qca-nss-drv-vlan-mgr-64
   FILES:=$(PKG_BUILD_DIR)/bridge/qca-nss-bridge-mgr.ko
   AUTOLOAD:=$(call AutoLoad,51,qca-nss-bridge-mgr)
 endef
 
-define KernelPackage/qca-nss-drv-bridge-mgr/Description
+define KernelPackage/qca-nss-drv-bridge-mgr-64/Description
 Kernel modules for NSS bridge manager
 endef
 
-define KernelPackage/qca-nss-drv-vlan-mgr
+define KernelPackage/qca-nss-drv-vlan-mgr-64
   SECTION:=kernel
   CATEGORY:=Kernel modules
   SUBMENU:=Network Devices
   TITLE:=Kernel driver for NSS vlan manager
-  DEPENDS:=@TARGET_ipq807x +kmod-qca-nss-drv
+  DEPENDS:=@TARGET_ipq807x +kmod-qca-nss-drv-64
   FILES:=$(PKG_BUILD_DIR)/vlan/qca-nss-vlan.ko
   AUTOLOAD:=$(call AutoLoad,51,qca-nss-vlan)
 endef
 
-define KernelPackage/qca-nss-drv-vlan-mgr/Description
+define KernelPackage/qca-nss-drv-vlan-mgr-64/Description
 Kernel modules for NSS vlan manager
 endef
 
@@ -63,11 +63,11 @@ EXTRA_CFLAGS+= \
 	-I$(STAGING_DIR)/usr/include/qca-ssdk/fal \
 	-I$(STAGING_DIR)/usr/include/nat46
 
-ifneq ($(CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe),)
+ifneq ($(CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe-64),)
 NSS_CLIENTS_MAKE_OPTS+=pppoe=y
 endif
 
-ifneq ($(CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr),)
+ifneq ($(CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr-64),)
 NSS_CLIENTS_MAKE_OPTS+=bridge-mgr=y
 #enable OVS bridge if ovsmgr is enabled
 ifneq ($(CONFIG_PACKAGE_kmod-qca-ovsmgr),)
@@ -76,7 +76,7 @@ EXTRA_CFLAGS+= -I$(STAGING_DIR)/usr/include/qca-ovsmgr
 endif
 endif
 
-ifneq ($(CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr),)
+ifneq ($(CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr-64),)
 NSS_CLIENTS_MAKE_OPTS+=vlan-mgr=y
 endif
 
@@ -97,6 +97,6 @@ define Build/Compile
 		modules
 endef
 
-$(eval $(call KernelPackage,qca-nss-drv-pppoe))
-$(eval $(call KernelPackage,qca-nss-drv-bridge-mgr))
-$(eval $(call KernelPackage,qca-nss-drv-vlan-mgr))
+$(eval $(call KernelPackage,qca-nss-drv-pppoe-64))
+$(eval $(call KernelPackage,qca-nss-drv-bridge-mgr-64))
+$(eval $(call KernelPackage,qca-nss-drv-vlan-mgr-64))
